deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ng-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ng
  template:
    metadata:
      labels:
        app: ng
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 8080
