svc.yml
apiVersion: v1
kind: Service
metadata:
  name: cip-ng
spec:
  type: NodePort
  selector:
    app: ng
  ports:
  - name: http
    port: 30002
    targetPort: 8080
    nodePort: 30004
