networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-incoming
spec:
  podSelector: 
    matchLabels:
      app: ng      
  policyTypes:
  - Ingress
  ingress:
    - ports:
       - protocol: TCP
         port: 8080
      from:
       - ipBlock:
           cidr: 0.0.0.0/0
       - podSelector:
           matchLabels:
             role: frontend
